--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
     </div>
   </div>
 
+  <footer class="mt-6 text-gray-500 text-sm">
+    🔄 Dữ liệu tự động cập nhật mỗi 5 giây.
+  </footer>
+
   <script src="script.js"></script>
 </body>
 </html>
