--- a/index.html
+++ b/index.html
@@ -5,61 +5,106 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>🌱 Hệ thống tưới tự động</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" rel="stylesheet">
 <style>
-  .card { margin-bottom:15px; }
-  .status-led { width:15px; height:15px; border-radius:50%; display:inline-block; margin-right:5px; }
+  body { background: #f5f7fa; font-family: 'Segoe UI', sans-serif; }
+  .card { border-radius: 15px; box-shadow: 0 8px 20px rgba(0,0,0,0.12); margin-bottom: 20px; }
+  .card-header { font-weight: bold; font-size: 1.1rem; }
+  .sensor-value { font-size: 2rem; font-weight: bold; }
+  .status-led { width:15px; height:15px; border-radius:50%; display:inline-block; margin-right:10px; }
+  .gradient-card { background: linear-gradient(135deg,#6dd5ed,#2193b0); color:#fff; }
+  .gradient-card2 { background: linear-gradient(135deg,#f093fb,#f5576c); color:#fff; }
+  .gradient-card3 { background: linear-gradient(135deg,#43e97b,#38f9d7); color:#fff; }
+  .btn-group .btn { min-width:80px; }
 </style>
 </head>
-<body class="bg-light">
-<div class="container py-3">
-  <h2 class="text-center mb-4">🌿 Hệ thống tưới tự động</h2>
-  <div class="row">
+<body>
+<div class="container py-4">
+  <div class="text-center mb-4">
+    <h1 class="fw-bold">🌿 Dashboard Hệ thống tưới tự động</h1>
+    <p class="text-muted">Giám sát và điều khiển trực tiếp từ browser</p>
+  </div>
+
+  <!-- SENSOR DATA -->
+  <div class="row g-3 mb-3">
     <div class="col-md-4">
-      <div class="card text-center">
-        <div class="card-header">Độ ẩm đất</div>
+      <div class="card gradient-card text-center p-3">
+        <div class="card-header"><i class="bi bi-droplet-half"></i> Độ ẩm đất</div>
         <div class="card-body">
-          <h3 id="soil">0%</h3>
+          <div class="sensor-value" id="soil">0%</div>
         </div>
       </div>
     </div>
     <div class="col-md-4">
-      <div class="card text-center">
-        <div class="card-header">Nhiệt độ</div>
+      <div class="card gradient-card2 text-center p-3">
+        <div class="card-header"><i class="bi bi-thermometer-half"></i> Nhiệt độ</div>
         <div class="card-body">
-          <h3 id="temp">0°C</h3>
+          <div class="sensor-value" id="temp">0°C</div>
         </div>
       </div>
     </div>
     <div class="col-md-4">
-      <div class="card text-center">
-        <div class="card-header">Độ ẩm KK</div>
+      <div class="card gradient-card3 text-center p-3">
+        <div class="card-header"><i class="bi bi-cloud-sun"></i> Độ ẩm KK</div>
         <div class="card-body">
-          <h3 id="hum">0%</h3>
+          <div class="sensor-value" id="hum">0%</div>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="row">
-    <div class="col-md-3"><div class="card text-center"><div class="card-header">Dòng chảy</div><div class="card-body"><h3 id="flow">0</h3></div></div></div>
-    <div class="col-md-3"><div class="card text-center"><div class="card-header">Min Threshold</div><div class="card-body"><h3 id="min">-</h3></div></div></div>
-    <div class="col-md-3"><div class="card text-center"><div class="card-header">Max Threshold</div><div class="card-body"><h3 id="max">-</h3></div></div></div>
-    <div class="col-md-3"><div class="card text-center"><div class="card-header">Thời gian tưới tiếp theo</div><div class="card-body"><h3 id="next">- phút</h3></div></div></div>
+  <!-- SYSTEM STATUS -->
+  <div class="row g-3 mb-3">
+    <div class="col-md-3">
+      <div class="card text-center p-3">
+        <div class="card-header"><i class="bi bi-speedometer2"></i> Dòng chảy</div>
+        <div class="card-body">
+          <div class="sensor-value" id="flow">0</div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="card text-center p-3">
+        <div class="card-header"><i class="bi bi-arrow-down-circle"></i> Min Threshold</div>
+        <div class="card-body">
+          <div class="sensor-value" id="min">-</div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="card text-center p-3">
+        <div class="card-header"><i class="bi bi-arrow-up-circle"></i> Max Threshold</div>
+        <div class="card-body">
+          <div class="sensor-value" id="max">-</div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="card text-center p-3">
+        <div class="card-header"><i class="bi bi-clock"></i> Thời gian tưới tiếp theo</div>
+        <div class="card-body">
+          <div class="sensor-value" id="next">- phút</div>
+        </div>
+      </div>
+    </div>
   </div>
 
-  <div class="row mt-4">
+  <!-- CONTROL -->
+  <div class="row g-3 mt-3">
     <div class="col-md-6">
-      <div class="card text-center">
-        <div class="card-header">Bơm nước</div>
+      <div class="card text-center p-3">
+        <div class="card-header"><i class="bi bi-lightning-fill"></i> Bơm nước <span class="status-led" id="pumpLed"></span></div>
         <div class="card-body">
-          <button class="btn btn-success me-2" onclick="controlPump(true)">ON</button>
-          <button class="btn btn-danger" onclick="controlPump(false)">OFF</button>
+          <div class="btn-group">
+            <button class="btn btn-success" onclick="controlPump(true)">ON</button>
+            <button class="btn btn-danger" onclick="controlPump(false)">OFF</button>
+          </div>
         </div>
       </div>
     </div>
     <div class="col-md-6">
-      <div class="card text-center">
-        <div class="card-header">Chế độ</div>
+      <div class="card text-center p-3">
+        <div class="card-header"><i class="bi bi-gear-fill"></i> Chế độ</div>
         <div class="card-body">
           <select id="modeSelect" class="form-select" onchange="controlMode(this.value)">
             <option value="AUTO">AUTO</option>
@@ -83,6 +128,7 @@ async function fetchStatus(){
     document.getElementById('next').innerText = data.next_time+' phút';
     document.getElementById('modeSelect').value = data.mode;
     document.getElementById('flow').innerText = data.pump ? '1' : '0';
+    document.getElementById('pumpLed').style.background = data.pump ? 'green' : 'red';
   }catch(e){console.error(e);}
 }
 
@@ -112,9 +158,9 @@ async function controlMode(mode){
   });
 }
 
-// refresh mỗi 2s
-setInterval(fetchSensor,2000);
-setInterval(fetchStatus,2000);
+// refresh 1s
+setInterval(fetchSensor,1000);
+setInterval(fetchStatus,1000);
 </script>
 </body>
 </html>
